--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dist"
   ],
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.17",
