--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   ],
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-state": "^0.4.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
