--- a/package.json
+++ b/package.json
@@ -24,16 +24,22 @@
     "apollo-link-state": "^0.4.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-multi-select-component": "^2.0.9",
     "react-router-dom": "^5.1.2",
     "reload": "^3.0.4",
     "serialize-javascript": "^3.0.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2",
+    "winston-transport": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
